[metadata]
name = klarify
version = 0.0.2
author = Samuel Plum
author_email = psyborg@taloria.com
description = Automatic sort and separate for multi-yaml files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thetalorian/klarify
project_urls =
    Bug Tracker = https://github.com/thetalorian/klarify/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    klarify = klarify.__main__:main

[options.package_data]
* = *.yaml
